# rpv-facil

./: Dockerfile  LICENSE  README.md  pyproject.toml
api/: main.py
data/in/: README.txt
data/samples/: sample_rpv.xml
src/rpv_facil/: cli.py  models.py
src/rpv_facil/extractor/: normalizer.py  pdf_extractor.py  xml_extractor.py
src/rpv_facil/integration/: payments.py
src/rpv_facil/workflow/: pipeline.py
tests/: test_extract_xml.py  test_workflow_ingest.py
ui/: app.py
