[project]
name = "rpv-facil"
version = "0.1.0"
description = "Automatização do fluxo de gestão de RPVs em municípios"
requires-python = ">=3.11"
authors = [{ name = "Kircinus do Brasil" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.7.0",
  "python-multipart>=0.0.9",
  "pandas>=2.2.2",
  "pymupdf>=1.24.7",
  "lxml>=5.2.2",
]

[project.optional-dependencies]
api = []
ocr = ["pytesseract>=0.3.10", "pdf2image>=1.17.0"]
ui = ["streamlit>=1.35.0"]

[tool.setuptools]
packages = ["rpv_facil"]

[project.scripts]
rpvf = "rpv_facil.cli:app"
